# bitwise-test

./: manage.py  pyproject.toml
bitwise/: asgi.py  settings.py  urls.py  wsgi.py
core/: models.py  services.py
